1st commit using Created using Colab. Small syntax errors fixed for compatibility

--- a/Cat_Caption_Cage_Match.ipynb
+++ b/Cat_Caption_Cage_Match.ipynb
@@ -5,7 +5,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "7-XSnhfrkjz0"
       },
       "source": [
         "# Cat-Caption Cage-Match 🐈‍⬛🎤\n",
@@ -31,7 +32,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "KMcKlUSykjz2"
       },
       "source": [
         "## 0  Install dependencies\n",
@@ -40,9 +42,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aIHWwsCqkjz2",
+        "outputId": "ea92d47f-05e4-40ff-bc22-baaf737cb577"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement google-genai-sdk==0.3.2 (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for google-genai-sdk==0.3.2\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
       "source": [
         "!pip install --quiet google-genai-sdk==0.3.2 gradio duckdb pillow requests\n"
       ]
@@ -52,7 +70,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "k63t3w6Jkjz3"
       },
       "source": [
         "## 1  Environment setup\n",
@@ -61,9 +80,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yH7DRB1lkjz3",
+        "outputId": "08de3abe-e500-4a34-945c-4831b7c2085e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🔑  Enter Google GenAI API key: ··········\n",
+            "🔑  Enter TheCatAPI key (or hit Enter to skip): ··········\n"
+          ]
+        }
+      ],
       "source": [
         "import os, getpass, textwrap, io, requests, random, duckdb\n",
         "from urllib.parse import urlparse\n",
@@ -82,7 +116,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "IVnrelNVkjz3"
       },
       "source": [
         "## 2  Imports & helpers\n"
@@ -90,12 +125,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 4,
+      "metadata": {
+        "id": "7RiM9oOVkjz3"
+      },
       "outputs": [],
       "source": [
         "import gradio as gr\n",
-        "from google.genai import GenerativeModel\n",
+        "from google.generativeai import GenerativeModel\n",
         "from PIL import Image\n",
         "\n",
         "model   = GenerativeModel(\"gemini-2.5-pro\")    # text judge\n",
@@ -143,7 +180,7 @@
         "                return max(0, min(10, int(tok)))\n",
         "    except Exception as e:\n",
         "        print(\"Gemini error:\", e)\n",
-        "    return random.randint(1, 5)  # fallback so game never stalls\n"
+        "    return random.randint(1, 5)  # fallback so game never stalls"
       ]
     },
     {
@@ -151,7 +188,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "uRtHLtJOkjz4"
       },
       "source": [
         "## 3  Gradio interface\n"
@@ -159,9 +197,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 612
+        },
+        "id": "oxKqSIHukjz4",
+        "outputId": "36c9c9f1-7765-40f3-920e-da11044ee655"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://81451336ff1368c2c2.gradio.live\n",
+            "\n",
+            "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://81451336ff1368c2c2.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
         "current_round = 0\n",
         "current_image = None\n",
@@ -170,12 +246,9 @@
         "    global current_round, current_image\n",
         "    current_round += 1\n",
         "    current_image = fetch_random_cat()\n",
-        "    buf = io.BytesIO()\n",
-        "    current_image.save(buf, format=\"JPEG\")\n",
-        "    buf.seek(0)\n",
-        "    return current_round, buf\n",
+        "    return current_round, current_image\n",
         "\n",
-        "round_num, img_buf = new_round()\n",
+        "round_num, img = new_round()\n",
         "\n",
         "def submit_caption(player_name, caption):\n",
         "    score = score_caption(current_image, caption)\n",
@@ -189,7 +262,7 @@
         "\n",
         "with gr.Blocks(title=\"Cat-Caption Cage-Match\") as demo:\n",
         "    gr.Markdown(\"## 🐱 Cat-Caption Cage-Match\")\n",
-        "    image_comp = gr.Image(value=img_buf, label=\"Fresh feline – craft your meme!\")\n",
+        "    image_comp = gr.Image(value=img, label=\"Fresh feline – craft your meme!\")\n",
         "    with gr.Row():\n",
         "        player_name = gr.Textbox(label=\"Your name\", placeholder=\"e.g. Alice\")\n",
         "        caption_box = gr.Textbox(label=\"Caption\", placeholder=\"15 words max…\")\n",
@@ -201,14 +274,14 @@
         "    submit_btn.click(submit_caption, inputs=[player_name, caption_box], outputs=[result, leaderboard])\n",
         "\n",
         "    def advance_round():\n",
-        "        rnd, buf = new_round()\n",
+        "        rnd, new_img = new_round()\n",
         "        caption_box.value = \"\"\n",
         "        result.value = \"\"\n",
-        "        return {image_comp: buf, leaderboard: leaderboard.value}\n",
+        "        return {image_comp: new_img, leaderboard: leaderboard.value}\n",
         "\n",
         "    next_btn.click(advance_round, outputs=[image_comp, leaderboard])\n",
         "\n",
-        "demo.launch(share=True)\n"
+        "demo.launch(share=True)"
       ]
     },
     {
@@ -216,7 +289,8 @@
       "metadata": {
         "vscode": {
           "languageId": "raw"
-        }
+        },
+        "id": "a1OhhQShkjz4"
       },
       "source": [
         "## 4  Shutdown / export (optional)\n",
@@ -227,8 +301,15 @@
   "metadata": {
     "language_info": {
       "name": "python"
+    },
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 0
 }
