removing unnecessary info

--- a/Cat_Caption_Cage_Match.ipynb
+++ b/Cat_Caption_Cage_Match.ipynb
@@ -1,82 +1,11 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        },
-        "id": "7-XSnhfrkjz0"
-      },
-      "source": [
-        "# Cat-Caption Cage-Match 🐈‍⬛🎤\n",
-        "\n",
-        "A lightweight, browser-based party game that lets players write meme captions for random cat\n",
-        "pictures and have them judged by Gemini 2.5 Pro.  Designed to run entirely from a single\n",
-        "Google Colab notebook (or Jupytext‑synced .py file).  Keep the scope surgical: five rounds,\n",
-        "one winner, then nuke the VM.\n",
-        "\n",
-        "---\n",
-        "**Quick‑start**\n",
-        "1. Run the first two cells to install deps and set your API keys.\n",
-        "2. Press ▶️ on every remaining cell *once*.\n",
-        "3. When the Gradio UI pops, share the public link in Zoom / Slack.\n",
-        "4. Click **Next Round** → everyone types a caption → AI scores → scoreboard updates.\n",
-        "\n",
-        "Rage‑quit factor minimal; laughs mandatory.\n",
-        "---\n"
-      ]
-    },
-    {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        },
-        "id": "KMcKlUSykjz2"
-      },
-      "source": [
-        "## 0  Install dependencies\n",
-        "(Colab resets every 12 h, so this cell runs each session.)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aIHWwsCqkjz2",
-        "outputId": "ea92d47f-05e4-40ff-bc22-baaf737cb577"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement google-genai-sdk==0.3.2 (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for google-genai-sdk==0.3.2\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install --quiet google-genai-sdk==0.3.2 gradio duckdb pillow requests\n"
-      ]
-    },
-    {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        },
-        "id": "k63t3w6Jkjz3"
-      },
-      "source": [
-        "## 1  Environment setup\n",
-        "Put secrets in RAM, never in Git.\n"
-      ]
+        "id": "kTTxhirSswUf"
+      }
     },
     {
       "cell_type": "code",
@@ -296,6 +225,18 @@
         "## 4  Shutdown / export (optional)\n",
         "Save the scoreboard to Drive or commit to Git if you care.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a58b7c27"
+      },
+      "source": [
+        "```\n",
+        "\n",
+        "id: aIHWwsCqkjz2\n",
+        "cell_type: code"
+      ]
     }
   ],
   "metadata": {
@@ -303,7 +244,8 @@
       "name": "python"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
